--- a/src/client/scss/x/_fieldset.scss
+++ b/src/client/scss/x/_fieldset.scss
@@ -97,6 +97,7 @@ div.x-fieldset-row {
 			color: #555555;
 			min-height: 100px;
 			resize:both;
+			font: 16px;
 	}
 
 	@media (max-width: $screen-sm) {
