--- a/src/client/scss/x/_flex-form.scss
+++ b/src/client/scss/x/_flex-form.scss
@@ -144,8 +144,9 @@
 			display: flex;
 			display: -webkit-box;
 			display: -webkit-flex;
-			flex-direction: row;
-			-webkit-flex-direction: row;
+			-ms-flex-flow: row wrap;
+			-webkit-flex-flow: row wrap;
+			flex-flow: row wrap;
 			padding-bottom: 3px;
 		}
 
@@ -208,24 +209,25 @@
 			display: flex;
 			display: -webkit-box;
 			display: -webkit-flex;
-			flex-direction: row;
-			-webkit-flex-direction: row;
+			-ms-flex-flow: row wrap;
+			-webkit-flex-flow: row wrap;
+			flex-flow: row wrap;
 			padding-bottom: 3px;
 		}
 
 		.flex-form-col-left {
 			flex-direction: column;
 			-webkit-flex-direction: column;
-			flex: 0 0 auto;
-			-webkit-flex: 0 0 auto;
-			padding-right: 3px;
+			flex: 1 1 100%;
+			-webkit-flex: 1 1 100%;
+			padding-bottom: 3px;
 		}
 
 		.flex-form-col-middle {
 			flex-direction: column;
 			-webkit-flex-direction: column;
-			flex: 1 0 auto;
-			-webkit-flex: 1 0 auto;
+			flex: 1 1 auto;
+			-webkit-flex: 1 1 auto;
 		}
 
 		.flex-form-col-right {
@@ -246,7 +248,7 @@
 		select {
 			font-size: 1em;
 			line-height: 1.25em;
-			width: 50px;
+			width: 100%;
 			height: 32px;
 			background-color: #fafafa;
 		}
@@ -258,10 +260,9 @@
 		display: flex;
 		display: -webkit-box;
 		display: -webkit-flex;
-		flex-direction: row;
-		-webkit-flex-direction: row;
-		flex-wrap: wrap;
-		-webkit-flex-wrap: wrap;
+		-ms-flex-flow: row wrap;
+		-webkit-flex-flow: row wrap;
+		flex-flow: row wrap;
 		justify-content: space-around;
 		//max-width: 500px;
 		width: auto;
@@ -272,24 +273,25 @@
 			display: flex;
 			display: -webkit-box;
 			display: -webkit-flex;
-			flex-direction: row;
-			-webkit-flex-direction: row;
+			-ms-flex-flow: row wrap;
+			-webkit-flex-flow: row wrap;
+			flex-flow: row wrap;
 			padding-bottom: 3px;
 		}
 
 		.flex-form-col-left {
 			flex-direction: column;
 			-webkit-flex-direction: column;
-			flex: 0 0 auto;
-			-webkit-flex: 0 0 auto;
-			padding-right: 3px;
+			flex: 1 1 100%;
+			-webkit-flex: 1 1 100%;
+			padding-bottom: 3px;
 		}
 
 		.flex-form-col-middle {
 			flex-direction: column;
 			-webkit-flex-direction: column;
-			flex: 1 0 auto;
-			-webkit-flex: 1 0 auto;
+			flex: 1 1 auto;
+			-webkit-flex: 1 1 auto;
 		}
 
 		.flex-form-col-right {
@@ -310,7 +312,7 @@
 		select {
 			font-size: 1em;
 			line-height: 1.25em;
-			width: 50px;;
+			width: 100%;;
 			height: 32px;
 			background-color: #fafafa;
 		}
@@ -322,10 +324,9 @@
 		display: flex;
 		display: -webkit-box;
 		display: -webkit-flex;
-		flex-direction: row;
-		-webkit-flex-direction: row;
-		flex-wrap: wrap;
-		-webkit-flex-wrap: wrap;
+		-ms-flex-flow: row wrap;
+		-webkit-flex-flow: row wrap;
+		flex-flow: row wrap;
 		justify-content: space-around;
 		background-color: #b0b0b0;
 		color: white;
@@ -388,10 +389,9 @@
 		display: flex;
 		display: -webkit-box;
 		display: -webkit-flex;
-		flex-direction: row;
-		-webkit-flex-direction: row;
-		flex-wrap: wrap;
-		-webkit-flex-wrap: wrap;
+		-ms-flex-flow: row wrap;
+		-webkit-flex-flow: row wrap;
+		flex-flow: row wrap;
 		background-color: white;
 		color: black;
 		border-bottom: 1px solid #ddd;
