[FIXED #106108862] Disable tap zoom of viewport for iOS
- hidden user photo in header on extra small device (width < 340px).

--- a/src/client/scss/x/_main.scss
+++ b/src/client/scss/x/_main.scss
@@ -328,3 +328,8 @@ a.forgotten {
 	background-repeat: no-repeat;
 	background-position: center;
 }
+@media (max-width: 340px) {
+	.x-login-photo {
+		display: none;
+	}
+}
